Projekat/code-gen/micko.output
Terminals unused in grammar

   COMMA


Grammar

    0 $accept: program $end

    1 program: macros_list function_list

    2 macros_list: %empty
    3            | macros

    4 macros: macro_definition
    5       | macros macro_definition

    6 macro_definition: macro_prom
    7                 | macro_func

    8 macro_prom: DEFINE _ID literal

    9 macro_func: DEFINE MACRO_INIT _ID _LPAREN _ID _RPAREN num_exp

   10 function_list: function
   11              | function_list function

   12 $@1: %empty

   13 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN body

   14 parameter: %empty
   15          | _TYPE _ID

   16 $@2: %empty

   17 body: _LBRACKET variable_list $@2 statement_list _RBRACKET

   18 variable_list: %empty
   19              | variable_list variable

   20 variable: _TYPE _ID _SEMICOLON

   21 statement_list: %empty
   22               | statement_list statement

   23 statement: compound_statement
   24          | assignment_statement
   25          | if_statement
   26          | return_statement

   27 compound_statement: _LBRACKET statement_list _RBRACKET

   28 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   29 num_exp: exp
   30        | num_exp _AROP exp

   31 exp: literal
   32    | _ID
   33    | function_call
   34    | _LPAREN num_exp _RPAREN

   35 literal: _INT_NUMBER
   36        | _UINT_NUMBER

   37 $@3: %empty

   38 function_call: _ID $@3 _LPAREN argument _RPAREN

   39 argument: %empty
   40         | num_exp

   41 if_statement: if_part
   42             | if_part _ELSE statement

   43 @4: %empty

   44 $@5: %empty

   45 if_part: _IF _LPAREN @4 rel_exp $@5 _RPAREN statement

   46 rel_exp: num_exp _RELOP num_exp

   47 return_statement: _RETURN num_exp _SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 13 15 20
_IF (259) 45
_ELSE (260) 42
_RETURN (261) 47
_ID (262) 8 9 13 15 20 28 32 38
_INT_NUMBER (263) 35
_UINT_NUMBER (264) 36
_LPAREN (265) 9 13 34 38 45
_RPAREN (266) 9 13 34 38 45
_LBRACKET (267) 17 27
_RBRACKET (268) 17 27
_ASSIGN (269) 28
_SEMICOLON (270) 20 28 47
_AROP (271) 30
_RELOP (272) 46
DEFINE (273) 8 9
COMMA (274)
MACRO_INIT (275) 9
ONLY_IF (276)


Nonterminals, with rules where they appear

$accept (22)
    on left: 0
program (23)
    on left: 1, on right: 0
macros_list (24)
    on left: 2 3, on right: 1
macros (25)
    on left: 4 5, on right: 3 5
macro_definition (26)
    on left: 6 7, on right: 4 5
macro_prom (27)
    on left: 8, on right: 6
macro_func (28)
    on left: 9, on right: 7
function_list (29)
    on left: 10 11, on right: 1 11
function (30)
    on left: 13, on right: 10 11
$@1 (31)
    on left: 12, on right: 13
parameter (32)
    on left: 14 15, on right: 13
body (33)
    on left: 17, on right: 13
$@2 (34)
    on left: 16, on right: 17
variable_list (35)
    on left: 18 19, on right: 17 19
variable (36)
    on left: 20, on right: 19
statement_list (37)
    on left: 21 22, on right: 17 22 27
statement (38)
    on left: 23 24 25 26, on right: 22 42 45
compound_statement (39)
    on left: 27, on right: 23
assignment_statement (40)
    on left: 28, on right: 24
num_exp (41)
    on left: 29 30, on right: 9 28 30 34 40 46 47
exp (42)
    on left: 31 32 33 34, on right: 29 30
literal (43)
    on left: 35 36, on right: 8 31
function_call (44)
    on left: 38, on right: 33
$@3 (45)
    on left: 37, on right: 38
argument (46)
    on left: 39 40, on right: 38
if_statement (47)
    on left: 41 42, on right: 25
if_part (48)
    on left: 45, on right: 41 42
@4 (49)
    on left: 43, on right: 45
$@5 (50)
    on left: 44, on right: 45
rel_exp (51)
    on left: 46, on right: 45
return_statement (52)
    on left: 47, on right: 26


State 0

    0 $accept: . program $end

    DEFINE  shift, and go to state 1

    $default  reduce using rule 2 (macros_list)

    program           go to state 2
    macros_list       go to state 3
    macros            go to state 4
    macro_definition  go to state 5
    macro_prom        go to state 6
    macro_func        go to state 7


State 1

    8 macro_prom: DEFINE . _ID literal
    9 macro_func: DEFINE . MACRO_INIT _ID _LPAREN _ID _RPAREN num_exp

    _ID         shift, and go to state 8
    MACRO_INIT  shift, and go to state 9


State 2

    0 $accept: program . $end

    $end  shift, and go to state 10


State 3

    1 program: macros_list . function_list

    _TYPE  shift, and go to state 11

    function_list  go to state 12
    function       go to state 13


State 4

    3 macros_list: macros .
    5 macros: macros . macro_definition

    DEFINE  shift, and go to state 1

    $default  reduce using rule 3 (macros_list)

    macro_definition  go to state 14
    macro_prom        go to state 6
    macro_func        go to state 7


State 5

    4 macros: macro_definition .

    $default  reduce using rule 4 (macros)


State 6

    6 macro_definition: macro_prom .

    $default  reduce using rule 6 (macro_definition)


State 7

    7 macro_definition: macro_func .

    $default  reduce using rule 7 (macro_definition)


State 8

    8 macro_prom: DEFINE _ID . literal

    _INT_NUMBER   shift, and go to state 15
    _UINT_NUMBER  shift, and go to state 16

    literal  go to state 17


State 9

    9 macro_func: DEFINE MACRO_INIT . _ID _LPAREN _ID _RPAREN num_exp

    _ID  shift, and go to state 18


State 10

    0 $accept: program $end .

    $default  accept


State 11

   13 function: _TYPE . _ID $@1 _LPAREN parameter _RPAREN body

    _ID  shift, and go to state 19


State 12

    1 program: macros_list function_list .
   11 function_list: function_list . function

    _TYPE  shift, and go to state 11

    $default  reduce using rule 1 (program)

    function  go to state 20


State 13

   10 function_list: function .

    $default  reduce using rule 10 (function_list)


State 14

    5 macros: macros macro_definition .

    $default  reduce using rule 5 (macros)


State 15

   35 literal: _INT_NUMBER .

    $default  reduce using rule 35 (literal)


State 16

   36 literal: _UINT_NUMBER .

    $default  reduce using rule 36 (literal)


State 17

    8 macro_prom: DEFINE _ID literal .

    $default  reduce using rule 8 (macro_prom)


State 18

    9 macro_func: DEFINE MACRO_INIT _ID . _LPAREN _ID _RPAREN num_exp

    _LPAREN  shift, and go to state 21


State 19

   13 function: _TYPE _ID . $@1 _LPAREN parameter _RPAREN body

    $default  reduce using rule 12 ($@1)

    $@1  go to state 22


State 20

   11 function_list: function_list function .

    $default  reduce using rule 11 (function_list)


State 21

    9 macro_func: DEFINE MACRO_INIT _ID _LPAREN . _ID _RPAREN num_exp

    _ID  shift, and go to state 23


State 22

   13 function: _TYPE _ID $@1 . _LPAREN parameter _RPAREN body

    _LPAREN  shift, and go to state 24


State 23

    9 macro_func: DEFINE MACRO_INIT _ID _LPAREN _ID . _RPAREN num_exp

    _RPAREN  shift, and go to state 25


State 24

   13 function: _TYPE _ID $@1 _LPAREN . parameter _RPAREN body

    _TYPE  shift, and go to state 26

    $default  reduce using rule 14 (parameter)

    parameter  go to state 27


State 25

    9 macro_func: DEFINE MACRO_INIT _ID _LPAREN _ID _RPAREN . num_exp

    _ID           shift, and go to state 28
    _INT_NUMBER   shift, and go to state 15
    _UINT_NUMBER  shift, and go to state 16
    _LPAREN       shift, and go to state 29

    num_exp        go to state 30
    exp            go to state 31
    literal        go to state 32
    function_call  go to state 33


State 26

   15 parameter: _TYPE . _ID

    _ID  shift, and go to state 34


State 27

   13 function: _TYPE _ID $@1 _LPAREN parameter . _RPAREN body

    _RPAREN  shift, and go to state 35


State 28

   32 exp: _ID .
   38 function_call: _ID . $@3 _LPAREN argument _RPAREN

    _LPAREN   reduce using rule 37 ($@3)
    $default  reduce using rule 32 (exp)

    $@3  go to state 36


State 29

   34 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 28
    _INT_NUMBER   shift, and go to state 15
    _UINT_NUMBER  shift, and go to state 16
    _LPAREN       shift, and go to state 29

    num_exp        go to state 37
    exp            go to state 31
    literal        go to state 32
    function_call  go to state 33


State 30

    9 macro_func: DEFINE MACRO_INIT _ID _LPAREN _ID _RPAREN num_exp .
   30 num_exp: num_exp . _AROP exp

    _AROP  shift, and go to state 38

    $default  reduce using rule 9 (macro_func)


State 31

   29 num_exp: exp .

    $default  reduce using rule 29 (num_exp)


State 32

   31 exp: literal .

    $default  reduce using rule 31 (exp)


State 33

   33 exp: function_call .

    $default  reduce using rule 33 (exp)


State 34

   15 parameter: _TYPE _ID .

    $default  reduce using rule 15 (parameter)


State 35

   13 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN . body

    _LBRACKET  shift, and go to state 39

    body  go to state 40


State 36

   38 function_call: _ID $@3 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 41


State 37

   30 num_exp: num_exp . _AROP exp
   34 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 42
    _AROP    shift, and go to state 38


State 38

   30 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 28
    _INT_NUMBER   shift, and go to state 15
    _UINT_NUMBER  shift, and go to state 16
    _LPAREN       shift, and go to state 29

    exp            go to state 43
    literal        go to state 32
    function_call  go to state 33


State 39

   17 body: _LBRACKET . variable_list $@2 statement_list _RBRACKET

    $default  reduce using rule 18 (variable_list)

    variable_list  go to state 44


State 40

   13 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN body .

    $default  reduce using rule 13 (function)


State 41

   38 function_call: _ID $@3 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 28
    _INT_NUMBER   shift, and go to state 15
    _UINT_NUMBER  shift, and go to state 16
    _LPAREN       shift, and go to state 29

    $default  reduce using rule 39 (argument)

    num_exp        go to state 45
    exp            go to state 31
    literal        go to state 32
    function_call  go to state 33
    argument       go to state 46


State 42

   34 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 34 (exp)


State 43

   30 num_exp: num_exp _AROP exp .

    $default  reduce using rule 30 (num_exp)


State 44

   17 body: _LBRACKET variable_list . $@2 statement_list _RBRACKET
   19 variable_list: variable_list . variable

    _TYPE  shift, and go to state 47

    $default  reduce using rule 16 ($@2)

    $@2       go to state 48
    variable  go to state 49


State 45

   30 num_exp: num_exp . _AROP exp
   40 argument: num_exp .

    _AROP  shift, and go to state 38

    $default  reduce using rule 40 (argument)


State 46

   38 function_call: _ID $@3 _LPAREN argument . _RPAREN

    _RPAREN  shift, and go to state 50


State 47

   20 variable: _TYPE . _ID _SEMICOLON

    _ID  shift, and go to state 51


State 48

   17 body: _LBRACKET variable_list $@2 . statement_list _RBRACKET

    $default  reduce using rule 21 (statement_list)

    statement_list  go to state 52


State 49

   19 variable_list: variable_list variable .

    $default  reduce using rule 19 (variable_list)


State 50

   38 function_call: _ID $@3 _LPAREN argument _RPAREN .

    $default  reduce using rule 38 (function_call)


State 51

   20 variable: _TYPE _ID . _SEMICOLON

    _SEMICOLON  shift, and go to state 53


State 52

   17 body: _LBRACKET variable_list $@2 statement_list . _RBRACKET
   22 statement_list: statement_list . statement

    _IF        shift, and go to state 54
    _RETURN    shift, and go to state 55
    _ID        shift, and go to state 56
    _LBRACKET  shift, and go to state 57
    _RBRACKET  shift, and go to state 58

    statement             go to state 59
    compound_statement    go to state 60
    assignment_statement  go to state 61
    if_statement          go to state 62
    if_part               go to state 63
    return_statement      go to state 64


State 53

   20 variable: _TYPE _ID _SEMICOLON .

    $default  reduce using rule 20 (variable)


State 54

   45 if_part: _IF . _LPAREN @4 rel_exp $@5 _RPAREN statement

    _LPAREN  shift, and go to state 65


State 55

   47 return_statement: _RETURN . num_exp _SEMICOLON

    _ID           shift, and go to state 28
    _INT_NUMBER   shift, and go to state 15
    _UINT_NUMBER  shift, and go to state 16
    _LPAREN       shift, and go to state 29

    num_exp        go to state 66
    exp            go to state 31
    literal        go to state 32
    function_call  go to state 33


State 56

   28 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON

    _ASSIGN  shift, and go to state 67


State 57

   27 compound_statement: _LBRACKET . statement_list _RBRACKET

    $default  reduce using rule 21 (statement_list)

    statement_list  go to state 68


State 58

   17 body: _LBRACKET variable_list $@2 statement_list _RBRACKET .

    $default  reduce using rule 17 (body)


State 59

   22 statement_list: statement_list statement .

    $default  reduce using rule 22 (statement_list)


State 60

   23 statement: compound_statement .

    $default  reduce using rule 23 (statement)


State 61

   24 statement: assignment_statement .

    $default  reduce using rule 24 (statement)


State 62

   25 statement: if_statement .

    $default  reduce using rule 25 (statement)


State 63

   41 if_statement: if_part .
   42             | if_part . _ELSE statement

    _ELSE  shift, and go to state 69

    $default  reduce using rule 41 (if_statement)


State 64

   26 statement: return_statement .

    $default  reduce using rule 26 (statement)


State 65

   45 if_part: _IF _LPAREN . @4 rel_exp $@5 _RPAREN statement

    $default  reduce using rule 43 (@4)

    @4  go to state 70


State 66

   30 num_exp: num_exp . _AROP exp
   47 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 71
    _AROP       shift, and go to state 38


State 67

   28 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 28
    _INT_NUMBER   shift, and go to state 15
    _UINT_NUMBER  shift, and go to state 16
    _LPAREN       shift, and go to state 29

    num_exp        go to state 72
    exp            go to state 31
    literal        go to state 32
    function_call  go to state 33


State 68

   22 statement_list: statement_list . statement
   27 compound_statement: _LBRACKET statement_list . _RBRACKET

    _IF        shift, and go to state 54
    _RETURN    shift, and go to state 55
    _ID        shift, and go to state 56
    _LBRACKET  shift, and go to state 57
    _RBRACKET  shift, and go to state 73

    statement             go to state 59
    compound_statement    go to state 60
    assignment_statement  go to state 61
    if_statement          go to state 62
    if_part               go to state 63
    return_statement      go to state 64


State 69

   42 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 54
    _RETURN    shift, and go to state 55
    _ID        shift, and go to state 56
    _LBRACKET  shift, and go to state 57

    statement             go to state 74
    compound_statement    go to state 60
    assignment_statement  go to state 61
    if_statement          go to state 62
    if_part               go to state 63
    return_statement      go to state 64


State 70

   45 if_part: _IF _LPAREN @4 . rel_exp $@5 _RPAREN statement

    _ID           shift, and go to state 28
    _INT_NUMBER   shift, and go to state 15
    _UINT_NUMBER  shift, and go to state 16
    _LPAREN       shift, and go to state 29

    num_exp        go to state 75
    exp            go to state 31
    literal        go to state 32
    function_call  go to state 33
    rel_exp        go to state 76


State 71

   47 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 47 (return_statement)


State 72

   28 assignment_statement: _ID _ASSIGN num_exp . _SEMICOLON
   30 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 77
    _AROP       shift, and go to state 38


State 73

   27 compound_statement: _LBRACKET statement_list _RBRACKET .

    $default  reduce using rule 27 (compound_statement)


State 74

   42 if_statement: if_part _ELSE statement .

    $default  reduce using rule 42 (if_statement)


State 75

   30 num_exp: num_exp . _AROP exp
   46 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 38
    _RELOP  shift, and go to state 78


State 76

   45 if_part: _IF _LPAREN @4 rel_exp . $@5 _RPAREN statement

    $default  reduce using rule 44 ($@5)

    $@5  go to state 79


State 77

   28 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON .

    $default  reduce using rule 28 (assignment_statement)


State 78

   46 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 28
    _INT_NUMBER   shift, and go to state 15
    _UINT_NUMBER  shift, and go to state 16
    _LPAREN       shift, and go to state 29

    num_exp        go to state 80
    exp            go to state 31
    literal        go to state 32
    function_call  go to state 33


State 79

   45 if_part: _IF _LPAREN @4 rel_exp $@5 . _RPAREN statement

    _RPAREN  shift, and go to state 81


State 80

   30 num_exp: num_exp . _AROP exp
   46 rel_exp: num_exp _RELOP num_exp .

    _AROP  shift, and go to state 38

    $default  reduce using rule 46 (rel_exp)


State 81

   45 if_part: _IF _LPAREN @4 rel_exp $@5 _RPAREN . statement

    _IF        shift, and go to state 54
    _RETURN    shift, and go to state 55
    _ID        shift, and go to state 56
    _LBRACKET  shift, and go to state 57

    statement             go to state 82
    compound_statement    go to state 60
    assignment_statement  go to state 61
    if_statement          go to state 62
    if_part               go to state 63
    return_statement      go to state 64


State 82

   45 if_part: _IF _LPAREN @4 rel_exp $@5 _RPAREN statement .

    $default  reduce using rule 45 (if_part)
